# DRF_API_Exchange_Rate

./: .env.example  .flake8  .gitignore  Docker-compose.yml  Makefile  README.md  config.py  manage.py  pyproject.toml
drf_api_exchange_rate/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
usd_rub/: admin.py  apps.py  models.py  schemas.py  serializers.py  services.py  tasks.py  views.py
usd_rub/migrations/: 0001_initial.py
